[package]
name = "wrym"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]
resolver = "2"

[dependencies]
cfg-if = "1.0.0"

wrym_transport = { path = "crates/wrym_transport" }
wrym_tcp = { path = "crates/wrym_tcp", optional = true }
wrym_udp = { path = "crates/wrym_udp", optional = true }
wrym_laminar = { path = "crates/wrym_laminar", optional = true }
wrym_webtransport = { path = "crates/wrym_webtransport", optional = true }

[dev-dependencies]
bincode = "1.3.3"

[features]
default = ["tcp"]
tcp = ["dep:wrym_tcp"]
udp = ["dep:wrym_udp"]
laminar = ["dep:wrym_laminar"]
webtransport = ["dep:wrym_webtransport"]
