[package]
name = "wrym_udp"
version = "0.1.0"
edition = "2021"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "UDP transport for wrym"
license = "AGPL-3.0"
repository = "https://github.com/wick3dr0se/wrym/tree/main/crates/wrym_udp"
keywords = ["networking", "gamedev", "udp"]
categories = ["network-programming", "game-development"]

[dependencies]
wrym_transport = { path = "../wrym_transport", version = "0.1.0" }
